aelys/tests/modules/errors/utils.aelys
// utils.aelys - Module with private function for testing
fn private() { 42 }
pub fn public() { 1 }
